Test commit to see that repository is updating files correctly

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Project: Landing Page</title>
 </head>
 <body>
-    <div class="title"></div>
+    <div class="title">This Is A test Change For Git Repository, Hello!</div>
 </body>
 </html>
