--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <div class="title">This Is A test Change For Git Repository, Hello!</div>
+    <div id="test-2">This is another commit test</div>
 </body>
 </html>
