Create main template boxes for the various page sections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Project: Landing Page</title>
 </head>
 <body>
-    <div class="title">This Is A test Change For Git Repository, Hello!</div>
-    <div id="test-2">This is another commit test</div>
+    <div class="main-background-boxes">
+        <div></div>
+        <div class="title"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
