Create all main div classes for page layout

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="main-background-boxes">
-        <div></div>
+        <div class="header"></div>
         <div class="title"></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="information-1"></div>
+        <div class="information-2"></div>
+        <div class="information-3"></div>
+        <div class="footer"></div>
     </div>
 </body>
 </html>
