fill remaining needed images, paragraphs for the template

--- a/index.html
+++ b/index.html
@@ -9,12 +9,52 @@
 </head>
 <body>
     <div class="main-background-boxes">
-        <div class="header"></div>
-        <div class="title"></div>
-        <div class="information-1"></div>
+        <div class="header">
+            <div class="header-logo">
+                <img src="images/pug-face.jpeg"
+                alt= "Image of a very flat faced pug, in a pink sweater, during fall">
+                <div>Logo Text</div>
+            </div>
+            <ul class="header-links">
+                <li>link 1</ul>
+                <li>link 2</ul>
+                <li>link 3</ul>
+        </div>
+
+        <div class="title">
+            <div class="title-information">
+                <title>Tito's Site Title</title>
+                <p>This is title information</p>
+                <button>Sign up</button>
+            </div>
+            <img src="images/learned-pug.jpeg">
+        </div>
+
+        <div class="information-1">
+            <div class="list-title">Title of this list</div>
+            <div class="images-with-description">
+                <img>
+                    <div>descriptions 1</div>
+                <img>
+                    <div>descriptions 2</div>
+                <img>
+                    <div>descriptions 3</div>
+                <img>
+                    <div>descriptions 4</div>
+            </div>
+        </div>
+
         <div class="information-2"></div>
-        <div class="information-3"></div>
+            <div class="quote">"A very inspirational quote"</div>
+            <div cass="quote-author">- Tito</div>
+
+        <div class="information-3">
+            <div class="call-to-action">Call TODAY!</div>
+            <div class="call-to-action-information">Sign up and what not</div>
+            <button>Sign up</button>
+        </div>
         <div class="footer"></div>
+            <div>Copyright Stuff</div>
     </div>
 </body>
 </html>
