--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
         <div class="footer"></div>
             <div>Copyright Stuff</div>
     </div>
+    <div>Additional dummy text to check format for commiting multiple changes</div>
 </body>
 </html>
