--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <img src="images/pug-face.jpeg"
                 alt= "Image of a very flat faced pug, in a pink sweater, during fall">
                 <div>Logo Text</div>
-            </div>
             <ul class="header-links">
-                <li>link 1</ul>
-                <li>link 2</ul>
-                <li>link 3</ul>
+                <li>link 1</li>
+                <li>link 2</li>
+                <li>link 3</li>
+            </ul>
         </div>
 
         <div class="title">
@@ -46,7 +46,7 @@
 
         <div class="information-2"></div>
             <div class="quote">"A very inspirational quote"</div>
-            <div cass="quote-author">- Tito</div>
+            <div class="quote-author">- Tito</div>
 
         <div class="information-3">
             <div class="call-to-action">Call TODAY!</div>
