Add backgrounds, some aligning, test creation of flexboxes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-background-boxes">
         <div class="header">
-            <div class="header-logo">
+            <div class="header-logo"></div>
                 <img src="images/pug-face.jpeg"
                 alt= "Image of a very flat faced pug, in a pink sweater, during fall">
                 <div>Logo Text</div>
@@ -44,10 +44,11 @@
             </div>
         </div>
 
-        <div class="information-2"></div>
+        <div class="information-2">
             <div class="quote">"A very inspirational quote"</div>
             <div class="quote-author">- Tito</div>
-
+        </div>
+        
         <div class="information-3">
             <div class="call-to-action">Call TODAY!</div>
             <div class="call-to-action-information">Sign up and what not</div>
