--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div class="main-background-boxes">
         <div class="header">
             <div class="header-logo"></div>
-                <img src="images/pug-face.jpeg"
-                alt= "Image of a very flat faced pug, in a pink sweater, during fall">
-                <div>Logo Text</div>
+                <div id="logo-and-text">
+                    <img src="images/pug-face.jpeg"
+                    alt= "Image of a very flat faced pug, in a pink sweater, during fall">
+                    <div>Logo Text</div>
+                </div>
             <ul class="header-links">
                 <li>link 1</li>
                 <li>link 2</li>
@@ -48,7 +50,7 @@
             <div class="quote">"A very inspirational quote"</div>
             <div class="quote-author">- Tito</div>
         </div>
-        
+
         <div class="information-3">
             <div class="call-to-action">Call TODAY!</div>
             <div class="call-to-action-information">Sign up and what not</div>
