Edit header to include desired layout and fonts. Other small global changes

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="main-background-boxes">
         <div class="header">
-            <div class="header-logo"></div>
-                <div id="logo-and-text">
-                    <img src="images/pug-face.jpeg"
-                    alt= "Image of a very flat faced pug, in a pink sweater, during fall">
-                    <div>Logo Text</div>
-                </div>
+            <div id="logo-and-text">
+                <img src="images/pug-face.jpeg"
+                alt= "Image of a very flat faced pug, in a pink sweater, during fall">
+                <div>Pug Logo</div>
+            </div>
+            
             <ul class="header-links">
                 <li>link 1</li>
                 <li>link 2</li>
