Add some styling to logo image, Add title styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-background-boxes">
         <div class="header">
             <div id="logo-and-text">
-                <img src="images/pug-face.jpeg"
+                <img id="logo-pic" src="images/pug-face.jpeg"
                 alt= "Image of a very flat faced pug, in a pink sweater, during fall">
                 <div>Pug Logo</div>
             </div>
@@ -29,7 +29,7 @@
                 <p>This is title information</p>
                 <button>Sign up</button>
             </div>
-            <img src="images/learned-pug.jpeg">
+            <img id="title-pic" src="images/learned-pug.jpeg">
         </div>
 
         <div class="information-1">
