Various Style and index changes to improve flexibility

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
         <div class="title">
             <div class="title-information">
-                <title>Tito's Site Title</title>
-                <p>This is title information</p>
+                <p class="text">Amazing Pug Filled Site</p>
                 <button>Sign up</button>
             </div>
             <img id="title-pic" src="images/learned-pug.jpeg">
