Troubleshoot title list alignment issues, separate and align items

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
         <div class="information-1">
             <div class="list-title">Title of this list</div>
-            <div class="images-with-description">
-                <img>
-                    <div>descriptions 1</div>
-                <img>
-                    <div>descriptions 2</div>
-                <img>
-                    <div>descriptions 3</div>
-                <img>
-                    <div>descriptions 4</div>
+            <div id="images-with-description">
+                <img class="pugs" src="images/skinni-pug.jpeg" alt="pug image">
+                    <div>Skinny Pug</div>
+                <img class="pugs" src="images/fat-pug.jpeg" alt="pug image">
+                    <div>Fat Pug</div>
+                <img class="pugs" src="images/energetic-pugs.jpeg" alt="pug image">
+                    <div>Energetic Pugs</div>
+                <img class="pugs" src="images/proud-pug.jpeg" alt="pug image">
+                    <div>Proud Pug</div>
             </div>
         </div>
 
