Have been coding a few hrs, forgot to commit, lots of changes, in all fields

--- a/index.html
+++ b/index.html
@@ -32,20 +32,26 @@
         </div>
 
         <div class="information-1">
-            <div class="list-title">Title of this list</div>
-            <div id="images-with-description">
-                <img class="pugs" src="images/skinni-pug.jpeg" alt="pug image">
-                    <div>Skinny Pug</div>
-                <img class="pugs" src="images/fat-pug.jpeg" alt="pug image">
-                    <div>Fat Pug</div>
-                <img class="pugs" src="images/energetic-pugs.jpeg" alt="pug image">
-                    <div>Energetic Pugs</div>
-                <img class="pugs" src="images/proud-pug.jpeg" alt="pug image">
-                    <div>Proud Pug</div>
-            </div>
+            <div class="list-title">The Kinds Of Pugs</div>
         </div>
 
-        <div class="information-2">
+        <div class="images-with-description">
+            <div class="different-pugs">Skinny Pug
+                <img class="pug-pics" src="images/skinni-pug.jpeg" alt="pug image">
+            </div>
+            <div class="different-pugs">Fat Pug
+                <img class="pug-pics" src="images/fat-pug.jpeg" alt="pug image">
+            </div>
+            <div class="different-pugs">Energetic Pugs
+                <img class="pug-pics" src="images/energetic-pugs.jpeg" alt="pug image">
+            </div>
+            <div class="different-pugs">Proud Pug
+                <img class="pug-pics" src="images/proud-pug.jpeg" alt="pug image">
+            </div>
+        </div>
+        
+
+        <div class="information-3">
             <div class="quote">"A very inspirational quote"</div>
             <div class="quote-author">- Tito</div>
         </div>
