Work on footer, align things, improve pug image size to use space better

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             <div class="call-to-action-information">Sign up and what not</div>
             <button>Sign up</button>
         </div>
-        <div class="footer"></div>
+        
+        <div class="footer">
             <div>Copyright Stuff</div>
+        </div>
     </div>
 </body>
 </html>
