Add footer styling, add quote section styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="text">Amazing Pug Filled Site</p>
                 <button>Sign up</button>
             </div>
-            <img id="title-pic" src="images/learned-pug.jpeg">
+            <img id="title-pic" src="images/learned-pug.avif">
         </div>
 
         <div class="information-1">
@@ -52,18 +52,19 @@
         
 
         <div class="information-3">
-            <div class="quote">"A very inspirational quote"</div>
+            <div class="quote">"Insert inspirational dog quote here"</div>
             <div class="quote-author">- Tito</div>
         </div>
 
-        <div class="information-3">
-            <div class="call-to-action">Call TODAY!</div>
-            <div class="call-to-action-information">Sign up and what not</div>
+        <div class="information-4">
+            <div class="call-to-action">Its Time!
+                <div>Sign up today!</div>
+            </div>
             <button>Sign up</button>
         </div>
-        
+
         <div class="footer">
-            <div>Copyright Stuff</div>
+            <div>Copyright © Tito Productions Media</div>
         </div>
     </div>
 </body>
