Add more styling and index file adjustments to improve layout flow

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <div id="logo-and-text">
                 <img id="logo-pic" src="images/pug-face.jpeg"
                 alt= "Image of a very flat faced pug, in a pink sweater, during fall">
-                <div>Pug Logo</div>
+                <div>Tito Media ©</div>
             </div>
             
             <ul class="header-links">
-                <li>link 1</li>
-                <li>link 2</li>
-                <li>link 3</li>
+                <li>Choice A</A></li>
+                <li>Choice B</li>
+                <li>Choice C</li>
             </ul>
         </div>
 
@@ -60,7 +60,7 @@
             <div class="call-to-action">Its Time!
                 <div>Sign up today!</div>
             </div>
-            <button>Sign up</button>
+            <button class="sign-up">Sign up</button>
         </div>
 
         <div class="footer">
