Style changes throughout page, some minor html changes for better flow

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             
             <ul class="header-links">
-                <li>Choice A</A></li>
+                <li>Choice A</li>
                 <li>Choice B</li>
                 <li>Choice C</li>
             </ul>
